# vies-mcp-server

./: README.md  pyproject.toml  test_validation.py
vies_mcp_server/: __main__.py  main.py  vat_validator.py
